--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
   "prettier": {
     "singleQuote": true
   },
-  "dependencies": {
-    "@babel/runtime": "^7.16.3"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "@emotion/react": ">=11.0.0",
     "prop-types": ">=15.7.0",
@@ -34,7 +32,6 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.3",
-    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@emotion/babel-plugin": "^11.3.0",
